--- a/android/RestoClient/res/values/strings.xml
+++ b/android/RestoClient/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <string name="app_name">RestoClient</string>
+    <drawable name="red">#F00</drawable>
 </resources>
