Add menu to navigate to a map with resto's (doesn't show resto's yet)

--- a/android/RestoClient/res/values-nl/strings.xml
+++ b/android/RestoClient/res/values-nl/strings.xml
@@ -10,4 +10,6 @@
     <string name="soup">Soep</string>
     <string name="meat">Vlees &amp; Veggie</string>
     <string name="vegetables">Groenten</string>
+
+    <string name="show_map">Toon restos op kaart</string>
 </resources>
