List of resto's in scraper + about dialog
* Add a small "about" dialog
* Remove android marker in favor of stock "star_on" marker
* Add a list of resto's with info to the scraper in json format

--- a/android/RestoClient/res/values/strings.xml
+++ b/android/RestoClient/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="vegetables">Vegetables</string>
 
     <string name="show_map">Show restos on map</string>
+    <string name="about">About</string>
 </resources>
