--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,8 +2,17 @@
 <resources>
     <drawable name="red">#F00</drawable>
 
-    <string name="app_name">Resto Menu</string>
-
+    <string name="app_name">Heracles</string>
+    
+    <!-- string for buttons on the dashboard -->
+    <string name="btn_news">News</string>
+    <string name="btn_calendar">Calendar</string>
+    <string name="btn_locations">Locations</string>
+    <string name="btn_menu">Menu</string>
+    <string name="btn_gsr">GSR</string>
+    <string name="btn_schamper">Schamper</string>
+    
+    <!-- other stuff -->
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
 
