Schamper title feed, activity titles
Main two changes:
 - Display a list of schamper daily messages on the SchamperDaily activity
 - Display an activity title for each activity
 - Rename RestoMap to BuildingMap, as we want to show buildings more than just resto's

--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -12,6 +12,11 @@
     <string name="btn_gsr">GSR</string>
     <string name="btn_schamper">Schamper</string>
     
+    <!-- Activity titles -->
+    <string name="title_menu">Resto Menu</string>
+    <string name="title_buildings">UGent Gebouwen</string>
+    <string name="title_schamper">Schamper Daily</string>
+    
     <!-- other stuff -->
     <string name="today">Vandaag</string>
     <string name="tomorrow">Morgen</string>
