Add button to visit schamper online; add activity to read story
Off to bed...

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="meat">Meat &amp; Veggie</string>
     <string name="vegetables">Vegetables</string>
 
+    <string name="schamper_readmore">Want to read more? Visit Schamper online...</string>
     <string name="show_map">Show restos on map</string>
     <string name="refresh">Refresh</string>
     <string name="about">About</string>
