--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -16,7 +16,13 @@
     <string name="title_menu">Resto Menu</string>
     <string name="title_buildings">UGent Buildings</string>
     <string name="title_schamper">Schamper Daily</string>
+    <string name="title_preferences">Preferences</string>
     
+    <!-- Preferences strings -->
+    <string name="settings">Settings</string>
+    <string name="preferences_schamper_daily_auto_update">Periodically update schamper daily.</string>
+    <string name="preferences_schamper_daily_auto_update_timeout">Periodic update timeout</string>
+
     <!-- other stuff -->
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
@@ -26,6 +32,7 @@
     <string name="meat">Meat &amp; Veggie</string>
     <string name="vegetables">Vegetables</string>
 
+    <string name="schamper_update_failed">The Schamper Daily content could not be updated.</string>
     <string name="schamper_readmore">Want to read more? Visit Schamper online...</string>
     <string name="show_map">Show restos on map</string>
     <string name="refresh">Refresh</string>
