--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="title_schamper">Schamper Daily</string>
     <string name="title_preferences">Preferences</string>
     <string name="title_buildings">UGent Buildings</string>
+
+    <!-- Club activity strings -->
+    <string name="activity_item_title">%1$s %2$s</string>
+    <string name="activity_item_time_location">%1$s tot %2$s - %3$s</string>
     
     <!-- Preferences strings -->
     <string name="settings">Settings</string>
