--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -3,30 +3,48 @@
     <drawable name="red">#F00</drawable>
 
     <string name="app_name">Hydra</string>
-    
+
     <!-- string for buttons on the dashboard -->
-    
+
     <!-- Activity titles -->
+    <string name="title_news">Nieuws</string>
+    <string name="title_calendar">Activiteiten</string>
+    <string name="title_info">Info</string>
     <string name="title_menu">Resto Menu</string>
-    <string name="title_buildings">UGent Gebouwen</string>
+    <string name="title_gsr">GSR</string>
     <string name="title_schamper">Schamper Daily</string>
-    
+    <string name="title_preferences">Voorkeuren</string>
+    <string name="title_buildings">UGent Gebouwen</string>
+
+    <!-- Club activity strings -->
+    <string name="activity_item_title">%1$s %2$s</string>
+    <string name="activity_item_time_location">%1$s tot %2$s - %3$s</string>
+
+    <!-- Preferences strings -->
+    <string name="settings">Settings</string>
+    <string name="preferences_schamper_daily_auto_update">Periodically update schamper daily.</string>
+    <string name="preferences_schamper_daily_auto_update_timeout">Periodic update timeout</string>
+
     <!-- other stuff -->
+    <string name="loading">Laden…</string>
     <string name="today">Vandaag</string>
     <string name="tomorrow">Morgen</string>
+    <string name="posted_by">Door %1$s op %2$s</string>
 
     <string name="soup">Soep</string>
     <string name="meat">Vlees &amp; Veggie</string>
     <string name="vegetables">Groenten</string>
 
+    <string name="schamper_update_failed">Schamper Daily kon niet geladen worden.</string>
+    <string name="schamper_readmore">Meer lezen? Bezoek Schamper online...</string>
     <string name="show_map">Toon restos op kaart</string>
+    <string name="refresh">Vernieuwen</string>
     <string name="about">Over</string>
     <string name="legend">Legende</string>
     <string name="legend_bold">Vet : Aanbevolen menu, € -0,50 korting reeds verrekend in de prijs</string>
     <string name="legend_star">* : Niet beschikbaar in resto Dierengeneeskunde, Boudewijn &amp; St. Jansvest</string>
     <string name="legend_hash"># : Niet beschikbaar in resto Boudewijn</string>
     <string name="legend_swiping">Je kan het menu voor de volgende dagen bekijken door naar links te swipen.</string>
-
     <string name="menu_unavailable">Sorry, het menu is momenteel niet beschikbaar. Gelieve later opnieuw te proberen.</string>
     <string name="no_restos_found">Sorry, de lijst met resto\'s kon niet worden opgehaald van de webservice. Gelieve later opnieuw te proberen.</string>
 </resources>
