--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -47,4 +47,5 @@
     <string name="legend_swiping">Je kan het menu voor de volgende dagen bekijken door naar links te swipen.</string>
     <string name="menu_unavailable">Sorry, het menu is momenteel niet beschikbaar. Gelieve later opnieuw te proberen.</string>
     <string name="no_restos_found">Sorry, de lijst met resto\'s kon niet worden opgehaald van de webservice. Gelieve later opnieuw te proberen.</string>
+    <string name="btn_info">Info</string>
 </resources>
