Fixed the GSR title

--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_calendar">Activiteiten</string>
     <string name="title_info">Info</string>
     <string name="title_menu">Resto Menu</string>
-    <string name="title_gsr">GSR</string>
+    <string name="title_gsr">Gentse Studentenraad</string>
     <string name="title_schamper">Schamper Daily</string>
     <string name="title_preferences">Voorkeuren</string>
     <string name="title_buildings">UGent Gebouwen</string>
