--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -41,12 +41,12 @@
     <string name="refresh">Refresh</string>
     <string name="about">About</string>
     <string name="legend">Legend</string>
-    <string name="legend_bold">Bold : Recommended menu, € -0.5 discount already included</string>
-    <string name="legend_star">* : Not available in resto Dierengeneeskunde, Boudewijn &amp; St. Jansvest</string>
-    <string name="legend_hash"># : Not available in resto Boudewijn</string>
+    <string name="legend_bold">Bold : Recommended menu, -0.50€iscount already included</string>
+    <string name="legend_fries">Fries or croquettes: +0,20€ extra</string>
+    <string name="legend_hash">## : menu not available in resto\'s Diergeneeskunde and FPPW, you can obtain spaghetti bolognaise as a replacement</string>
     <string name="legend_swiping">You can see the menu for the coming days by swiping to the left.</string>
 
     <string name="menu_unavailable">Sorry, this menu is currently not available. Please try again later.</string>
-    <string name="no_restos_found">Sorry, no resto\'s could be retrieved from the online service. Please retry later.</string>
+    <string name="no_restos_found">Sorry, no resto\€could be retrieved from the online service. Please retry later.</string>
     <string name="btn_info">Info</string>
 </resources>
