--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -7,47 +7,46 @@
     <!-- string for buttons on the dashboard -->
 
     <!-- Activity titles -->
-    <string name="title_news">News</string>
-    <string name="title_calendar">Activities</string>
+    <string name="title_news">Nieuws</string>
+    <string name="title_calendar">Activiteiten</string>
     <string name="title_info">Info</string>
     <string name="title_menu">Resto Menu</string>
-    <string name="title_gsr">GSR</string>
+    <string name="title_gsr">Gentse Studentenraad</string>
     <string name="title_schamper">Schamper Daily</string>
-    <string name="title_preferences">Preferences</string>
-    <string name="title_buildings">UGent Buildings</string>
+    <string name="title_preferences">Voorkeuren</string>
+    <string name="title_buildings">UGent Gebouwen</string>
 
     <!-- Club activity strings -->
     <string name="activity_item_title">%1$s %2$s</string>
-    <string name="activity_item_time_location">%1$s to %2$s - %3$s</string>
+    <string name="activity_item_time_location">%1$s tot %2$s - %3$s</string>
 
     <!-- Preferences strings -->
     <string name="settings">Settings</string>
     <string name="inappsupport">Feedback</string>
-    <string name="preferences_schamper_daily_auto_update">Periodically update Schamper Daily.</string>
+    <string name="preferences_schamper_daily_auto_update">Periodically update schamper daily.</string>
     <string name="preferences_schamper_daily_auto_update_timeout">Periodic update timeout</string>
 
     <!-- other stuff -->
-    <string name="loading">Loading…</string>
-    <string name="today">Today</string>
-    <string name="tomorrow">Tomorrow</string>
-    <string name="posted_by">By %1$s on %2$s</string>
+    <string name="loading">Laden…</string>
+    <string name="today">Vandaag</string>
+    <string name="tomorrow">Morgen</string>
+    <string name="posted_by">Door %1$s op %2$s</string>
 
-    <string name="soup">Soup</string>
-    <string name="meat">Meat &amp; Veggie</string>
-    <string name="vegetables">Vegetables</string>
+    <string name="soup">Soep</string>
+    <string name="meat">Vlees &amp; Veggie</string>
+    <string name="vegetables">Groenten</string>
 
-    <string name="schamper_update_failed">The Schamper Daily content could not be updated.</string>
-    <string name="schamper_readmore">Want to read more? Visit Schamper online...</string>
-    <string name="show_map">Show restos on map</string>
-    <string name="refresh">Refresh</string>
-    <string name="about">About</string>
-    <string name="legend">Legend</string>
-    <string name="legend_bold">Bold : Recommended menu, -0.50€ discount already included</string>
-    <string name="legend_fries">Fries or croquettes: +0,20€ extra</string>
-    <string name="legend_hash">## : menu not available in resto\'s Diergeneeskunde and FPPW, you can obtain spaghetti bolognaise as a replacement</string>
-    <string name="legend_swiping">You can see the menu for the coming days by swiping to the left.</string>
-
-    <string name="menu_unavailable">Sorry, this menu is currently not available. Please try again later.</string>
-    <string name="no_restos_found">Sorry, no resto\€could be retrieved from the online service. Please retry later.</string>
+    <string name="schamper_update_failed">Schamper Daily kon niet geladen worden.</string>
+    <string name="schamper_readmore">Meer lezen? Bezoek Schamper online...</string>
+    <string name="show_map">Toon restos op kaart</string>
+    <string name="refresh">Vernieuwen</string>
+    <string name="about">Over</string>
+    <string name="legend">Legende</string>
+    <string name="legend_bold">Vet : Aanbevolen menu, -0,50€ korting reeds verrekend in de prijs</string>
+    <string name="legend_fries">Frieten of kroketten: +0,20€  bij menu</string>
+    <string name="legend_hash">## : menu niet verkrijgbaar in resto\'s Diergeneeskunde en FPPW, ter vervanging is spaghetti bolognese te verkrijgen</string>
+    <string name="legend_swiping">Je kan het menu voor de volgende dagen bekijken door naar links te swipen.</string>
+    <string name="menu_unavailable">Sorry, het menu is momenteel niet beschikbaar. Gelieve later opnieuw te proberen.</string>
+    <string name="no_restos_found">Sorry, de lijst met resto\'s kon niet worden opgehaald van de webservice. Gelieve later opnieuw te proberen.</string>
     <string name="btn_info">Info</string>
 </resources>
