Schamper items now working and renamed hydrawpway to hydra
Visual studio was being a scumbag, so I had to ya know..delete all the
shit and copy it to new location(renaming)
Also now items from schamper are click/tapp-able. They will navigate to
new page with the article. Title is also truncated after 31
characters(best result for user experience)

--- a/WP/Hydra/Resources/AppResources.resx
+++ b/WP/Hydra/Resources/AppResources.resx
@@ -128,7 +128,10 @@
   <data name="ApplicationTitle" xml:space="preserve">
     <value>Hydra</value>
   </data>
-  <data name="SampleProperty" xml:space="preserve">
-    <value>Sample Runtime Property Value</value>
+  <data name="AppBarButtonText" xml:space="preserve">
+    <value>add</value>
+  </data>
+  <data name="AppBarMenuItemText" xml:space="preserve">
+    <value>Menu Item</value>
   </data>
 </root>
