--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_schamper">Schamper Daily</string>
     <string name="title_preferences">Voorkeuren</string>
     <string name="title_buildings">UGent Gebouwen</string>
+    <string name="title_restomap">UGent Restos</string>
 
     <!-- Club activity strings -->
     <string name="activity_item_title">%1$s %2$s</string>
