Removed duplicate layout code which bugged the search on the actionbar and started the resto search implementation

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="title_preferences">Voorkeuren</string>
     <string name="title_buildings">UGent Gebouwen</string>
     <string name="title_restomap">UGent Restos</string>
+    
+    <string name="search_title">Zoek Resto...</string>
 
     <!-- Club activity strings -->
     <string name="activity_item_title">%1$s %2$s</string>
