#45 implemented the base of the playing system: music plays and can be controlled in the app

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="title_info">Info</string>
     <string name="title_menu">Resto Menu</string>
     <string name="title_restomap">Resto Map</string>
-    <string name="title_gsr">Gentse Studentenraad</string>
+    <string name="title_urgent">Urgent.fm</string>
     <string name="title_schamper">Schamper Daily</string>
     <string name="title_preferences">Voorkeuren</string>
     
