--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_urgent">Urgent.fm</string>
     <string name="title_schamper">Schamper Daily</string>
     <string name="title_preferences">Voorkeuren</string>
+    <string name="title_settings_associations_filter">Filter verenigingen</string>
     
     <string name="search_title">Zoek</string>
     <string name="resto_search_label"></string>
@@ -27,8 +28,10 @@
     <!-- Preferences strings -->
     <string name="settings">Settings</string>
     <string name="inappsupport">Feedback</string>
-    <string name="preferences_schamper_daily_auto_update">Periodically update schamper daily.</string>
-    <string name="preferences_schamper_daily_auto_update_timeout">Periodic update timeout</string>
+    <string name="pref_filter">Filter</string>
+    <string name="pref_filter_activites">Filter verenigingen</string>
+    <string name="pref_filter_activities_summary">Filter verenigingen uit het nieuws en activiteiten</string>
+    <string name="pref_filter_activities_list">Kies verenigingen</string>
 
     <!-- other stuff -->
     <string name="loading">Laden…</string>
