--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="resto_search_label"></string>
     <string name="resto_search_hint">Zoek Resto...</string>
 
+    <string name="no_associations_selected">Selecteer ten minste 1 vereniging in de instellingen.</string>
+    <string name="no_news_available">Geen nieuws beschikbaar.</string>
+    <string name="no_activities_available">Geen activiteiten beschikbaar.</string>
+
     <!-- Club activity strings -->
     <string name="activity_item_title">%1$s %2$s</string>
     <string name="activity_item_time_location">%1$s tot %2$s - %3$s</string>
@@ -45,6 +49,7 @@
     <string name="vegetables">Groenten</string>
 
     <string name="schamper_update_failed">Schamper Daily kon niet geladen worden.</string>
+    <string name="resto_update_failed">De resto\'s konden niet geladen worden.</string>
     <string name="schamper_readmore">Meer lezen? Bezoek Schamper online...</string>
     <string name="show_map">Toon restos op kaart</string>
     <string name="refresh">Vernieuwen</string>
