--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="today">Vandaag</string>
     <string name="tomorrow">Morgen</string>
     <string name="posted_by">%1$s door %2$s</string>
+    <string name="posted_by_newline">%1$s\ndoor %2$s</string>
 
     <string name="soup">Soep</string>
     <string name="meat">Vlees &amp; Veggie</string>
