--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -71,7 +71,8 @@
     <string name="tomorrow">Morgen</string>
     <string name="posted_by">%1$s door %2$s</string>
     <string name="posted_by_newline">%1$s\ndoor %2$s</string>
-
+    
+    <string name="no_schamper_articles">Geen Schamper artikels gevonden.</string>
     <string name="schamper_update_failed">Schamper Daily kon niet geladen worden.</string>
     <string name="resto_update_failed">De resto\'s konden niet geladen worden.</string>
     <string name="nowplaying_update_failed">Info over de huidige track kon niet worden opgezocht.</string>
