--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -29,13 +29,13 @@
     <string name="no_activities_available">Geen activiteiten beschikbaar.</string>
 
     <!-- Club activity strings -->
-    <string name="activity_item_association_title">Vereniging</string>
-    <string name="activity_item_date_title">Datum</string>
-    <string name="activity_item_location_title">Locatie</string>
+    <string name="activity_item_association_title">Door %1s</string>
+    <string name="activity_item_date_title">Wanneer</string>
+    <string name="activity_item_location_title">Waar</string>
     <string name="activity_item_guests_title">Gasten</string>
-    <string name="activity_item_content_title">Beschrijving</string>
+    <string name="activity_item_content_title">Details</string>
     <string name="activity_item_title">%1$s %2$s</string>
-    <string name="activity_item_time_location">%1$s tot %2$s - %3$s</string>
+    <string name="activity_item_time_location">%1$s van %2$s tot %3$s</string>
 
     <!-- Preferences strings -->
     <string name="inappsupport">Feedback</string>
