--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -43,7 +43,11 @@
     <string name="pref_filter_activites">Toon alle verenigingen</string>
     <string name="pref_filter_activities_summary">Selecteer verenigingen om activiteiten en nieuwsberichten te filteren. Berichten die in de kijker staan worden steeds getoond.</string>
     <string name="pref_filter_activities_list">Selectie</string>
-    <string name="no_selection">Geen items gevonden. Selecteer verenigingen in de instellingen of toon alle verenigingen</string>
+    <string name="pref_facebook">Facebook</string>
+    <string name="pref_facebook_title">Koppel aan Facebook</string>
+    <string name="get_started">Log in op Facebook</string>
+    <string name="pref_facebook_summary">Koppel Hydra aan je Facebook-account en krijg te zien hoeveel en welke vrienden er naar activiteiten gaan!</string>
+    <string name="pref_filter_activites">Toon alle verenigingen</string><string name="no_selection">Geen items gevonden. Selecteer verenigingen in de instellingen of toon alle verenigingen</string>
     
     <!-- About strings -->
     <string name="about_text">Hydra werd ontwikkeld door Zeus WPI, de studentenwerkgroep informatica van Universiteit Gent, in opdracht van de Dienst StudentenActiviteiten.</string>
