--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -39,7 +39,6 @@
     <string name="activity_item_time_location">%1$s van %2$s - %3$s</string>
 
     <!-- Facebook in Calendar -->
-
     <string name="now">Koppel</string>
     <string name="not_now">Niet nu</string>
     <string name="koppel_text">Koppel Hydra aan Facebook en krijg meer informatie bij de activiteiten. Je kan dit later altijd aanpassen in de voorkeuren.</string>
@@ -67,6 +66,7 @@
     <!-- About strings -->
     <string name="about_text">Hydra werd ontwikkeld door Zeus WPI, de studentenwerkgroep informatica van Universiteit Gent, in opdracht van de Dienst StudentenActiviteiten.</string>
     <string name="about_zeus_button">Meer informatie</string>
+    
     <!-- External Components strings -->
     <string name="external_components_intro">Deze app maakt gebruik van de volgende bibliotheken van derden.</string>
     
@@ -79,7 +79,10 @@
     <string name="legend">Legende</string>
     <string name="legend_swiping">Je kan het menu voor de volgende dagen bekijken door naar links te swipen.</string>
     <string name="resto_search_label"></string>
-    <string name="resto_search_hint">Zoek Resto...</string>
+    <string name="resto_search_hint">Zoek Resto&#8230;</string>
+
+    <!-- Map stuffz -->
+    <string name="maps_opengl_error">Uw apparaat ondersteunt de laatste versie van Google Maps niet.</string>
 
     <!-- other stuff -->
     <string name="loading">Laden…</string>
@@ -89,7 +92,7 @@
     <string name="posted_by_newline">%1$s\ndoor %2$s</string>
     
     <string name="no_song_info_found">Geen plaat(info)</string>
-    <string name="schamper_readmore">Meer lezen? Bezoek Schamper online...</string>
+    <string name="schamper_readmore">Meer lezen? Bezoek Schamper online&#8230;</string>
     <string name="refresh">Vernieuwen</string>
     <string name="btn_info">Info</string>
     
